--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,18 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
+}
   
 td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid black;
     text-align: left;
     padding: 8px;
-  }
+}
   
 tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+    background-color: grey;
+}
+
+.testclass {
+    color: blueviolet;
+}
