--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ table {
     width: 100%;
 }
   
+body {
+    background-color:#9bddff
+}
+
 td, th {
     border: 1px solid black;
     text-align: left;
@@ -12,6 +16,12 @@ td, th {
   
 tr:nth-child(even) {
     background-color: grey;
+}
+
+#Headline {
+    font-family: arial, sans-serif;
+    color: darkslategray;
+    text-align: center;
 }
 
 .testclass {
